# CCTransformationExtraction

./: .gitignore  Amount.g4  DictManager.py  EventNetwork.g4  Field.g4  FileManager.py  GeoAnQu.txt  GeoAnQu.xlsx  GeoAnQu_07292022.xlsx  GeoAnQu_08252021.xlsx  GeoAnQu_10242022.xlsx  GeoAnQu_corpus.txt  GeoAnQu_corpus_20210430.xlsx  GeoAnQu_parser_ results.json  GeoAnQu_parser_results_1024.json  HConcept.py  Identify.py  Identify_Egi.py  Identify_new.py  KeyStatics.py  Location.g4  Logger.py  Object.g4  ParsedQuestion-Amount.txt  QuestionParser.py  README.md  Results.json  Results.xlsx  TypesToQueryConverter.py  asyncClient.py  asyncWorker.py  blocklyoutput_GeoAnQu.json  corpus.txt  corpus.yaml  full_test.py  geoparser.py  main.py  ner.py  question2graph.py  readme.md  (+4 more)
CCTrans_evaluation/: Test question corpus.xlsx  Test question.xlsx
Data/: GeoAnQu_parser_results.json  Leticia_parser_results.json  blocklyoutput_GeoAnQu.json  blocklyoutput_Leticia.json  blocklyoutput_retri.json  parse_results_retri_0601.json  retri_parser_results.json
Dictionary/: coreConceptsML.txt  extremaTrans.txt  network.txt  place_type.txt
Grammar/: GeoAnQu.g4  GeoAnQu.interp  GeoAnQu.tokens  GeoAnQuLexer.interp  GeoAnQuLexer.py  GeoAnQuLexer.tokens  GeoAnQuListener.py  GeoAnQuParser.py  GeoAnQu_0426.txt  GeoAnQu_backup.g4  test.txt
Rules/: GeoAnQu_parser_results_1024_cct.json  conversionRules.json  hConceptHierarchy.json  measureHierarchy.json  measureHierarchyCct.json  missingRules.json  readme.txt
geo_question_parser/: Identify.py  asyncClient.py  asyncWorker.py  transformation_query.py
manualData/: GeoAnQu_extended_cct_Simon_remquesmark_update.json  templateRules_annotated.json  (+1 more)
parser_module/: GeoAnQu.txt  Identify_Haiqi.py  setup.cfg
parser_module/CCTrans_evaluation/: EvaluationResults.csv  Results_test_Auto.json  evalTest.py
parser_module/Grammar/: GeoAnQu.g4
parser_module/geo_question_parser/: __init__.py  transformation_query.py
(+13 files in other folders)
