[metadata]
name = geo_question_parser
version = 0.0.0
author = Haiqi Xu
author_email =
description = Extract core concept transformations from geo-analytical questions.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/quangis/geo-question-parser
project_urls =
    Bug Tracker = https://github.com/quangis/geo-question-parser/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Development Status :: 2 - Pre-Alpha
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: GIS
    Topic :: Scientific/Engineering :: Information Analysis
    Natural Language :: English

[options]
packages = find:
python_requires = >=3.7
install_requires =
    antlerinator

[build_antlr]
commands =
    antlerinator:4.9.3 Grammar/GeoAnQu.g4 -Dlanguage=Python3 -o geo_question_parser/grammar -Xexact-output-dir
output =
    geo_question_parser/grammar/geoAnQu*.py

[options.package_data]
